[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
[project]
name = "dataprep-ai"
version = "0.1.1"
description = "One-line, opinionated data cleaning for pandas/Polars"
authors = [{ name="Rohit Rajdev" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0"
]
[project.optional-dependencies]
app = ["streamlit>=1.35.0", "matplotlib>=3.8.0", "polars>=1.6.0"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project.urls]
Homepage = "https://github.com/RohitRajdev/dataprep-ai"
Documentation = "https://github.com/RohitRajdev/dataprep-ai#readme"
Issues = "https://github.com/RohitRajdev/dataprep-ai/issues"
[project.optional-dependencies]
app = ["streamlit>=1.35.0","matplotlib>=3.7"]
full = ["streamlit>=1.35.0","matplotlib>=3.7","ydata-profiling>=4.6; python_version >= '3.9'"]
[tool.hatch.build.targets.wheel]
packages = ["src/dataprep_ai"]
include = ["src/dataprep_ai/**/.py","README.md","LICENSE","examples/","docs/*"]
[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
pythonpath = ["src"]
